code25_all/scala/14700244.txt
scala> val lb = ListBuffer[Tuple2[Int, Int]]()
lb: scala.collection.mutable.ListBuffer[(Int, Int)] = ListBuffer()

scala> lb += (1, 2)
<console>:11: error: type mismatch;
 found   : Int(1)
 required: (Int, Int)
              lb += (1, 2)
                     ^

scala> lb += Tuple2(1, 2)
res43: lb.type = ListBuffer((1,2))

